--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,11 @@
 
 .projects-grid {
   display: flex;
+
+}
+
+.projects-grid Card {
+  padding-left: 5em;
 }
 
 .contact-body {
@@ -181,7 +186,7 @@
   padding-bottom: 1em;
   border-radius:100%;
   position: absolute;
-  left: 190px;
+  left: 220px;
   top: 190px;
 }
 
